--- a/Frontend/Mosahem/package.json
+++ b/Frontend/Mosahem/package.json
@@ -32,8 +32,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.19.3",
-    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
     "@shopify/flash-list": "^1.6.1",
@@ -52,14 +53,19 @@
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
+    "random-id": "^1.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.7",
     "react-native-drawer-layout": "4.0.0-alpha.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -75,6 +81,7 @@
     "@types/i18n-js": "3.8.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.2.14",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
